# opentelemetry-sqlcommenter

./: README.md  package_it.sh
doc/: config.toml
docs/: 404.html  README.md  index.html  index.json  index.xml  sitemap.xml
python/sqlcommenter-python/: README.md  runtests.py  setup.cfg  setup.py
python/sqlcommenter-python/google/: __init__.py
python/sqlcommenter-python/google/cloud/sqlcommenter/: __init__.py  opentelemetry.py
python/sqlcommenter-python/google/cloud/sqlcommenter/django/: middleware.py
python/sqlcommenter-python/google/cloud/sqlcommenter/psycopg2/: extension.py
python/sqlcommenter-python/google/cloud/sqlcommenter/sqlalchemy/: executor.py
python/sqlcommenter-python/opentelemetry/: __init__.py
python/sqlcommenter-python/opentelemetry/sqlcommenter/: fastapi.py  flask.py  opencensus.py  version.py
python/sqlcommenter-python/opentelemetry/sqlcommenter/django/: middleware.py
python/sqlcommenter-python/opentelemetry/sqlcommenter/psycopg2/: extension.py
python/sqlcommenter-python/opentelemetry/sqlcommenter/sqlalchemy/: executor.py
python/sqlcommenter-python/tests/: compat.py  opencensus_mock.py  opentelemetry_mock.py  tests.py
python/sqlcommenter-python/tests/django/: app_urls.py  models.py  settings.py  tests.py  urls.py  views.py
python/sqlcommenter-python/tests/flask/: app.py  tests.py
python/sqlcommenter-python/tests/generic/: __init__.py  test_generate_sql_comment.py  test_opencensus.py  test_opentelemetry.py
python/sqlcommenter-python/tests/psycopg2/: tests.py
python/sqlcommenter-python/tests/sqlalchemy/: tests.py
(+303 files in other folders)
